--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/*LAYOUT*/
+.main {
+  min-height: 100vh;
+  background-color: #ffd60b;
+}
+.container {
+  max-width: 980px;
+  margin: 0 auto;
+}
+/*FLEX UTILITIES*/
+.flex {
+  display: flex;
+}
+.align-items-center {
+  align-items: center;
+}
